--- a/Agra/public/css/app.css
+++ b/Agra/public/css/app.css
@@ -1024,6 +1024,8 @@ video {
   margin-bottom: 1.5rem;
 }.mb-8 {
   margin-bottom: 2rem;
+}.mb-\[5rem\] {
+  margin-bottom: 5rem;
 }.me-1 {
   margin-inline-end: 0.25rem;
 }.me-2 {
@@ -1090,12 +1092,8 @@ video {
   margin-top: 2rem;
 }.mt-auto {
   margin-top: auto;
-}.mt-5 {
-  margin-top: 1.25rem;
-}.mb-\[10rem\] {
-  margin-bottom: 10rem;
-}.mb-\[5rem\] {
-  margin-bottom: 5rem;
+}.me-1\.5 {
+  margin-inline-end: 0.375rem;
 }.line-clamp-\[--line-clamp\] {
   overflow: hidden;
   display: -webkit-box;
@@ -1141,8 +1139,6 @@ video {
   height: 0.5rem;
 }.h-2\.5 {
   height: 0.625rem;
-}.h-2\/3 {
-  height: 66.666667%;
 }.h-20 {
   height: 5rem;
 }.h-24 {
@@ -1169,6 +1165,8 @@ video {
   height: 14rem;
 }.h-6 {
   height: 1.5rem;
+}.h-60 {
+  height: 15rem;
 }.h-7 {
   height: 1.75rem;
 }.h-72 {
@@ -1650,6 +1648,8 @@ video {
   white-space: normal;
 }.whitespace-nowrap {
   white-space: nowrap;
+}.break-words {
+  overflow-wrap: break-word;
 }.rounded {
   border-radius: 0.25rem;
 }.rounded-full {
@@ -1697,6 +1697,9 @@ video {
   border-width: 1px;
 }.border-0 {
   border-width: 0px;
+}.border-x-\[0\.5px\] {
+  border-left-width: 0.5px;
+  border-right-width: 0.5px;
 }.border-y {
   border-top-width: 1px;
   border-bottom-width: 1px;
@@ -1829,6 +1832,9 @@ video {
 }.bg-yellow-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(253 246 178 / var(--tw-bg-opacity));
+}.bg-purple-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(237 235 254 / var(--tw-bg-opacity));
 }.bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }.from-blue-800 {
@@ -1869,6 +1875,8 @@ video {
   padding: 1.25rem;
 }.p-6 {
   padding: 1.5rem;
+}.p-8 {
+  padding: 2rem;
 }.px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -2015,6 +2023,8 @@ video {
   padding-top: 1.5rem;
 }.pt-8 {
   padding-top: 2rem;
+}.pb-20 {
+  padding-bottom: 5rem;
 }.text-left {
   text-align: left;
 }.text-center {
@@ -2177,6 +2187,9 @@ video {
 }.text-yellow-800 {
   --tw-text-opacity: 1;
   color: rgb(114 59 19 / var(--tw-text-opacity));
+}.text-purple-800 {
+  --tw-text-opacity: 1;
+  color: rgb(85 33 181 / var(--tw-text-opacity));
 }.underline {
   text-decoration-line: underline;
 }.antialiased {
@@ -2215,6 +2228,10 @@ video {
 }.shadow-xl {
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }.outline-none {
   outline: 2px solid transparent;
@@ -2324,8 +2341,12 @@ video {
 }.before\:w-0\.5::before {
   content: var(--tw-content);
   width: 0.125rem;
+}.first\:border-s-0:first-child {
+  border-inline-start-width: 0px;
 }.first\:border-t-0:first-child {
   border-top-width: 0px;
+}.last\:border-e-0:last-child {
+  border-inline-end-width: 0px;
 }.first-of-type\:ps-1:first-of-type {
   padding-inline-start: 0.25rem;
 }.last-of-type\:pe-1:last-of-type {
@@ -2394,8 +2415,6 @@ video {
 }.hover\:bg-red-500:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(240 82 82 / var(--tw-bg-opacity));
-}.hover\:bg-transparent:hover {
-  background-color: transparent;
 }.hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -2434,6 +2453,8 @@ video {
 }.hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}.hover\:underline:hover {
+  text-decoration-line: underline;
 }.hover\:grayscale-0:hover {
   --tw-grayscale: grayscale(0);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2516,6 +2537,8 @@ video {
   --tw-ring-offset-width: 0px;
 }.focus\:ring-offset-2:focus {
   --tw-ring-offset-width: 2px;
+}.focus-visible\:z-10:focus-visible {
+  z-index: 10;
 }.focus-visible\:bg-gray-100:focus-visible {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -2587,8 +2610,17 @@ video {
 }.disabled\:checked\:text-gray-400:checked:disabled {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}.group\/item:first-child .group-first\/item\:rounded-s-lg {
+  border-start-start-radius: 0.5rem;
+  border-end-start-radius: 0.5rem;
+}.group\/item:last-child .group-last\/item\:rounded-e-lg {
+  border-start-end-radius: 0.5rem;
+  border-end-end-radius: 0.5rem;
 }.group:hover .group-hover\:bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}.group\/button:hover .group-hover\/button\:text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }.group:hover .group-hover\:text-blue-800 {
   --tw-text-opacity: 1;
   color: rgb(30 66 159 / var(--tw-text-opacity));
@@ -2765,6 +2797,12 @@ video {
 }.dark\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}.dark\:text-purple-400:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(172 148 250 / var(--tw-text-opacity));
+}.dark\:shadow-gray-800:is(.dark *) {
+  --tw-shadow-color: #1F2937;
+  --tw-shadow: var(--tw-shadow-colored);
 }.dark\:ring-gray-400\/20:is(.dark *) {
   --tw-ring-color: rgb(156 163 175 / 0.2);
 }.dark\:ring-gray-50\/10:is(.dark *) {
@@ -2925,6 +2963,9 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }.group:hover .dark\:group-hover\:bg-gray-800\/60:is(.dark *) {
   background-color: rgb(31 41 55 / 0.6);
+}.group\/button:hover .dark\:group-hover\/button\:text-gray-400:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }.group:hover .dark\:group-hover\:text-gray-200:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -3297,6 +3338,10 @@ video {
     height: 10rem;
   }
 
+  .md\:h-60 {
+    height: 15rem;
+  }
+
   .md\:h-\[35rem\] {
     height: 35rem;
   }
@@ -3313,20 +3358,12 @@ video {
     width: 50%;
   }
 
-  .md\:w-60 {
-    width: 15rem;
-  }
-
   .md\:w-72 {
     width: 18rem;
   }
 
   .md\:w-80 {
     width: 20rem;
-  }
-
-  .md\:w-\[600px\] {
-    width: 600px;
   }
 
   .md\:w-\[900px\] {
@@ -3348,6 +3385,10 @@ video {
 
   .md\:grid-cols-\[--cols-md\] {
     grid-template-columns: var(--cols-md);
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row {
@@ -3394,6 +3435,10 @@ video {
 
   .md\:p-6 {
     padding: 1.5rem;
+  }
+
+  .md\:p-12 {
+    padding: 3rem;
   }
 
   .md\:px-6 {
